diam section in progress

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -71,10 +71,17 @@ th {
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
-  margin: 0;
 }
 input[type="number"] {
   appearance: textfield;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+/* Remove spinner buttons for Safari */
+input[type="number"]::-webkit-textfield-decoration-container {
+  display: none;
 }
 
 /* scrollbar */
@@ -89,4 +96,8 @@ input[type="number"] {
 
 ::-webkit-scrollbar-thumb {
   @apply bg-gray-700;
+}
+
+.diam-pretium-scroll::-webkit-scrollbar {
+  @apply h-0;
 }
