--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -116,3 +116,7 @@ input[type="number"]::-webkit-textfield-decoration-container {
 .diam-pretium-scroll::-webkit-scrollbar {
   @apply h-0;
 }
+
+.form_select {
+  padding: 0 20px 0 8px !important;
+}
